# ICPC_2022_Automated-Identification-of-Libraries-from-Vulnerability-Data-Can-We-Do-Better

./: README.md
CPE_Module/: CPE_module.py
Description_Module/: data_preprocess.py  description_module.py  metrics.py
FastXML/: baseline.py  util.py
FastXML/fastxml/fastxml/: inferencer.cpp  splitter.cpp
LightXML/: run.sh
LightXML/src/: cluster.py  dataset.py  ensemble.py  main.py  model.py
Omikuji/: omikuji_predict.py
Utilities/: data_preparation.py  label_utility.py  metric_calculation.py
Utilities/dataset/: cve_labels_merged_cleaned.csv
dismec/dismec/: linear.cpp
dismec/eurlex/: GS.txt  label-mappings.txt  test-remapped-tfidf-relabeled-zeroed.txt  test-remapped-tfidf-relabeled.txt  test-remapped-tfidf.txt  test-remapped.txt  test.txt  top3.out  train-remapped-tfidf-relabeled.txt  train-remapped-tfidf.txt  train-remapped.txt  train.txt
dismec/eurlex/final-output/: top1.out  top5.out
dismec/eurlex/output/: 1.out  2.out  3.out
dismec/prepostprocessing/: DistributedPredictor.java  TfIdfCalculator.java
extremeText/: extremetext_train.py
extremeText/XT_GitHub/: CMakeLists.txt  README.md  classification-example.sh  classification-results.sh  quantization-example.sh  runtests.py  setup.py  word-vector-example.sh
extremeText/XT_GitHub/python/: README.md  README.rst
extremeText/XT_GitHub/python/benchmarks/: get_word_vector.py
extremeText/XT_GitHub/python/doc/examples/: FastTextEmbeddingBag.py  bin_to_vec.py  compute_accuracy.py  get_vocab.py  train_supervised.py  train_unsupervised.py
extremeText/XT_GitHub/python/extremeText/: ExtremeText.py  __init__.py
extremeText/XT_GitHub/python/extremeText/pybind/: extremetext_pybind.cc
extremeText/XT_GitHub/python/extremeText/tests/: test_configurations.py  test_script.py
extremeText/XT_GitHub/src/: args.cc  args.h  dictionary.cc  dictionary.h  fasttext.cc  fasttext.h  kmeans.cc  kmeans.h  loss_ensemble.cc  loss_ensemble.h  loss_plt.cc  loss_plt.h  loss_sigmoid.cc  loss_sigmoid.h  losslayer.cc  losslayer.h  main.cc  matrix.cc  matrix.h  model.cc  model.h  smatrix.h  sutils.h  threads.h  utils.cc  utils.h  vector.cc  vector.h
extremeText/dataset/: test.txt  test_single  train.txt
xml-cnn/: LICENSE  README.md  README_J.md  build_problem.py  my_functions.py  params.yml  requirements.yml  test.py  train.py  utils.py  xml_cnn.py
